Resolved White Spaces and Responsiveness

--- a/style.css
+++ b/style.css
@@ -134,12 +134,12 @@ header {
   background-color: white;
 }
 
-.desktop-nav > * {
+.desktop-nav>* {
   padding-left: calc(0.2 * (100vw - var(--media-breakpoint)) + 12px);
   padding-right: calc(0.2 * (100vw - var(--media-breakpoint)) + 12px);
 }
 
-.fordesktopnav > * {
+.fordesktopnav>* {
   padding-left: calc(0.2 * (100vw - var(--media-breakpoint)) + 12px);
   padding-right: calc(0.2 * (100vw - var(--media-breakpoint)) + 12px);
 }
@@ -306,7 +306,7 @@ header {
   background-color: transparent;
 }
 
-.head > * {
+.head>* {
   margin-left: 16px;
   margin-right: 16px;
 }
@@ -369,7 +369,7 @@ header {
   background-position: center;
 }
 
-.headline-about > * {
+.headline-about>* {
   margin-left: 16px;
   margin-right: 16px;
 }
@@ -448,12 +448,12 @@ header {
   box-shadow: 0 0 1px 0 lightslategray;
 }
 
-.about-logo-section > * {
+.about-logo-section>* {
   margin-left: 16px;
   margin-right: 16px;
 }
 
-.about-logo-section > .title-group {
+.about-logo-section>.title-group {
   display: flex;
   flex-direction: column;
   gap: 12px;
@@ -515,7 +515,7 @@ header {
   box-shadow: 0 0 2px 0 rgba(39, 42, 49, 0.623);
 }
 
-.past-events-section > * {
+.past-events-section>* {
   margin-left: 16px;
   margin-right: 16px;
 }
@@ -593,12 +593,12 @@ header {
   padding-bottom: 50px;
 }
 
-.program-section > * {
+.program-section>* {
   margin-left: 16px;
   margin-right: 16px;
 }
 
-.program-section > .title-group {
+.program-section>.title-group {
   display: flex;
   flex-direction: column;
   gap: 12px;
@@ -632,7 +632,7 @@ header {
   border: 2px solid transparent;
 }
 
-.program-section li > div {
+.program-section li>div {
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -657,13 +657,12 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  gap: 16px;
-  min-height: 100vh;
+  gap: 40px;
   background-color: white;
-  padding-bottom: 50px;
+  padding: 70px 0;
 }
 
-.speakers > * {
+.speakers>* {
   margin-left: 16px;
   margin-right: 16px;
 }
@@ -777,7 +776,7 @@ header {
   padding-bottom: 50px;
 }
 
-.partners > * {
+.partners>* {
   margin-left: 16px;
   margin-right: 16px;
 }
@@ -1159,7 +1158,7 @@ header {
     min-height: calc(100vh - 121px);
   }
 
-  .head > * {
+  .head>* {
     margin-left: calc(0.2 * (100vw - var(--media-breakpoint)) + 24px);
     margin-right: calc(0.2 * (100vw - var(--media-breakpoint)) + 24px);
     max-width: 80%;
@@ -1178,7 +1177,7 @@ header {
   }
 
   /* ############################ program section ############################ */
-  .program-section > * {
+  .program-section>* {
     margin-left: calc(0.15 * (100vw - var(--media-breakpoint)) + 24px);
     margin-right: calc(0.15 * (100vw - var(--media-breakpoint)) + 24px);
     max-width: 80%;
@@ -1188,7 +1187,7 @@ header {
     display: flex;
     align-items: center;
     justify-items: center;
-    gap: 8px;
+    gap: 12px;
   }
 
   .site-map div {
@@ -1203,13 +1202,11 @@ header {
     justify-content: flex-start;
     align-content: space-between;
     background-color: rgb(211 211 211 / 20%);
-    max-width: 190px;
-    height: 150px;
     border: 3px solid var(--primerr);
     border: 3px solid transparent;
   }
 
-  .program-section li > div {
+  .program-section li>div {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -1232,7 +1229,7 @@ header {
     border: 3px solid var(--primerr);
   }
 
-  .speakers > * {
+  .speakers>* {
     margin-left: calc(0.2 * (100vw - var(--media-breakpoint)) + 12px);
     margin-right: calc(0.2 * (100vw - var(--media-breakpoint)) + 12px);
   }
@@ -1333,7 +1330,7 @@ header {
     background-position: center;
   }
 
-  .headline-about > * {
+  .headline-about>* {
     margin-left: calc(0.2 * (100vw - var(--media-breakpoint)) + 24px);
     margin-right: calc(0.2 * (100vw - var(--media-breakpoint)) + 24px);
     max-width: 80%;
@@ -1351,13 +1348,13 @@ header {
     max-width: var(--media-breakpoint);
   }
 
-  .about-logo-section > * {
+  .about-logo-section>* {
     margin-left: calc(0.15 * (100vw - var(--media-breakpoint)) + 24px);
     margin-right: calc(0.15 * (100vw - var(--media-breakpoint)) + 24px);
     max-width: 80%;
   }
 
-  .speakers-section > * {
+  .speakers-section>* {
     margin-left: calc(0.2 * (100vw - var(--media-breakpoint)) + 12px);
     margin-right: calc(0.2 * (100vw - var(--media-breakpoint)) + 12px);
   }
@@ -1394,4 +1391,10 @@ header {
   color: var(--white);
   background-color: var(--secondary);
   border: 3px solid var(--masks);
+}
+
+@media (min-width: 1366px) {
+  .dynamic-speakers {
+    padding: 0 10rem;
+  }
 }
